fix footer phone number color on mobile

--- a/assets/css/modules/layout/_footer.scss
+++ b/assets/css/modules/layout/_footer.scss
@@ -43,7 +43,7 @@
     font-size:1.2em;
   }
 
-  .right-part a {
+  .phone-number {
     color: white;
     text-decoration: none;
     transition: color .1s linear;
